<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_app_bar_profile"
        layout="@layout/layout_tool_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_app_bar_profile"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="800dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Spinner
                android:id="@+id/spinner_state"
                style="@style/Platform.Widget.AppCompat.Spinner"
                android:layout_width="161dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:entries="@array/states"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/city_layout"
                app:layout_constraintTop_toBottomOf="@+id/ifsc_code_layout" />

            <TextView
                android:id="@+id/textview_valid_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/valid_state"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintStart_toStartOf="@+id/spinner_state"
                app:layout_constraintTop_toBottomOf="@+id/spinner_state" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ifsc_code_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/primaryLightColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_number_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ifsc_code"
                    style="@style/nayagadi_edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/ifsc_code"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textview_valid_ifsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/valid_ifsc"
                android:textColor="@color/btn_danger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ifsc_code_layout" />

            <TextView
                android:id="@+id/textview_valid_acct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/valid_account"
                android:textColor="@color/btn_danger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_number_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_number_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/primaryLightColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_account_number"
                    style="@style/nayagadi_edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/account_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_layout"
                android:layout_width="171dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:textColorHint="@color/primaryLightColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ifsc_code_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_city"
                    style="@style/nayagadi_edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pin_code_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/primaryLightColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_pin_code"
                    style="@style/nayagadi_edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/pin_code"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textview_valid_pin_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/valid_pin_code"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pin_code_layout" />

            <TextView
                android:id="@+id/textview_valid_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/valid_city"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_layout" />

            <TextView
                android:id="@+id/textview_valid_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/valid_phone"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_layout" />

            <TextView
                android:id="@+id/textview_valid_fn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/valid_fn"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_layout" />

            <TextView
                android:id="@+id/textview_valid_ln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/invalid_ln"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/primaryLightColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_first_name"
                    style="@style/nayagadi_edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/primaryLightColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_last_name"
                    style="@style/nayagadi_edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/enter_last_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/primaryLightColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_phone_number"
                    style="@style/nayagadi_edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_update_profile"
                style="@style/nayagadi_button_normal"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pin_code_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressar_creation"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include_app_bar_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>
